# tienthien196.github.io

./: .gitignore  .gitmodules  CNAME  Ecosystem.docs.md  README.md  data.json  exampble.md  i.html  index.html  index2.html  main.py  vd1.md
CSLIist/: ComputerNetwork.md
Resource/: AI_and_Agent_Resource_Collection.md  Book1.xlsx  Bot_and_MMO_Backend_Resource_Collection.md  Browsers_and_Developer_Tools_Resource_Collection.md  Computer_Science_and_OS_Resource_Collection.md  Cybersecurity_Resource_Collection.md  DSA_and_DevOps_Resource_Collection.md  Game_Development_Resource_Collection.md  (+4 more)
Resource/ArchFinn/: .gitignore  README.md  main.py  out.txt  pyproject.toml  test.afinn
Resource/ArchFinn/Studio/: docs.md
Resource/ArchFinn/archfinn/: __init__.py
Resource/ArchFinn/archfinn/cli/: main.py
Resource/ArchFinn/archfinn/core/: engine.py  model.py  runtime.py
Resource/ArchFinn/archfinn/parser/: ast.py  grammar.py  lexer.py  parser.py
Resource/ArchFinn/archfinn/sdk/: api.py
Resource/ArchFinn/archfinn/stdlib/cloud/: controls.afinn
Resource/ArchFinn/archfinn_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Resource/ArchFinn/archfinn_studio/: __init__.py  main.py
Resource/ArchFinn/archfinn_studio/gui/: code_editor.py  graph_viewer.py  log_panel.py  main_window.py  simulation_control.py  syntax_highlighter.py
Resource/ArchFinn/archfinn_studio/plugins/: example_plugin.py
Resource/ArchFinn/archfinn_studio/utils/: graph_builder.py
Resource/ArchFinn/docs/: archfinn_script_guide.md
Resource/ArchFinn/examples/: demo.afinn
(+112 files in other folders)
