[build-system]
requires = ["setuptools", "wheel", "lark"]
build-backend = "setuptools.build_meta"

[project]
name = "archfinn-engine"
version = "0.1.0"
description = "ArchFinn Script Engine + Studio"
authors = [{name = "ArchFinn Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lark",
    "networkx",
    "numpy",
    "pandas",
    "fastapi",
    "streamlit",
    "PySide6",
    "matplotlib"
]

[project.scripts]
archfinn = "archfinn.cli.main:main"
archfinn-studio = "archfinn_studio.main:main"

[tool.setuptools]
packages = ["archfinn", "archfinn_studio"]
